--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@ simulation-output/
 rat-data-coords/
 full-run/logs/
 full-run/out/
-full-run/out-stage2-only/
+full-run/out-oracle/
+full-run/out-eblue/
 full-run/plots/
 full-run/clipping/
 full-run/data/*
